labs/lab07-mirrormaker/testapp/generic-consumer/target/classes/META-INF/fabric8/openshift/demo-word-count-rest-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: demo-word-count-rest
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.redhat.devnation.kafka.streams
  name: demo-word-count-rest
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: demo-word-count-rest
