labs/lab07-mirrormaker/testapp/generic-consumer/target/classes/META-INF/fabric8/openshift/genericconsumer-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: genericconsumer
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.redhat.amqstreams.workshop
  name: genericconsumer
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: genericconsumer
